# fila

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  flake.nix
db/: schema.sql
docs/: design.md
src/: error.rs  job.rs  lib.rs  publisher.rs  subscriber.rs  sync.rs
src/subscriber/: builder.rs  coordinator.rs  job_lifecycle.rs  listener.rs  magic.rs  queue_worker.rs
tests/it/: cancelled_after_failures.rs  catch_panic.rs  graceful_shutdown.rs  main.rs  successful.rs
