[package]
name = "fila"
version = "0.1.0"
edition = "2021"
description = "A simple PostgreSQL job processing library"
license = "MIT"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[workspace]
resolver = "2"
members = ["."]

[workspace.dependencies]
fila.path = "."
async-trait = "0.1.77"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "json",
] }
tokio = { version = "1.36.0", features = ["rt", "time", "sync"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
tracing = "0.1.40"
uuid = { version = "1.7.0", features = ["v7"] }
