[package]
name = "fila"
version = "0.1.0"
edition = "2021"
description = "A simple PostgreSQL job processing library"
license = "MIT"

[dependencies]
async-trait.workspace = true
futures-util.workspace = true
serde_json.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
ctor.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true

[workspace]
resolver = "2"
members = ["."]

[workspace.dependencies]
fila.path = "."
async-trait = "0.1.77"
ctor = "0.2.6"
futures-util = "0.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "json",
] }
thiserror = "1.0"
tokio = { version = "1.36.0", features = ["rt", "time", "sync", "macros"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v7"] }

[workspace.lints.clippy]
# Groups
all = "warn"
pedantic = "warn"
# Individual lints
wildcard_imports = { level = "allow", priority = 2 }
